Add logger and main application structure for Stream Deck plugin
- Implemented a `FileLogger` for logging application events and errors.
- Created a `main.rs` file to initialize the logger and handle application startup.
- Added `plugin.rs` to manage the core functionality of the Stream Deck plugin, including WebSocket communication and event handling.
- Introduced `LaunchArgs` struct to parse command-line arguments for plugin configuration.
- Established a command router to handle various application commands and manage state.
- Set up logging for significant events and errors throughout the application lifecycle.

--- a/icu.veelume.gw2.sdPlugin/ui/settings.html
+++ b/icu.veelume.gw2.sdPlugin/ui/settings.html
@@ -12,7 +12,7 @@
         </sdpi-textfield>
     </sdpi-item>
     <sdpi-item label="Bindings File">
-        <sdpi-file setting="bindings" accept="text/xml"></sdpi-file>
+        <sdpi-file setting="bindings_file" accept="text/xml"></sdpi-file>
     </sdpi-item>
 </body>
 
